--- a/Views/SaDamageRecoup/Index.cshtml
+++ b/Views/SaDamageRecoup/Index.cshtml
@@ -71,8 +71,8 @@
                    dataInit: function (elem) {
                     name = $(elem).val();
                     $('#saDamageRecoup').setColProp('productSku', { editoptions: { value:getProductSku()} });
-                    $('#saDamageRecoup').setColProp('productName', { editoptions: { value:getProductName()} });
-                   // console.log(name);
+                    $('#saDamageRecoup').setColProp('productId', { editoptions: { value:getProductName()} });
+                   console.log(name);
                     },
                        dataEvents: [
                     {
@@ -80,7 +80,7 @@
                         fn: function(e) {
                        name =$('#saDamageRecoup').jqGrid ('getCell', curRowId, 'supplierName');
                       $('#saDamageRecoup').setColProp('productSku', { editoptions: { value:getProductSku()} });
-                      $('#saDamageRecoup').setColProp('productName', { editoptions: { value:getProductName()} });
+                      $('#saDamageRecoup').setColProp('productId', { editoptions: { value:getProductName()} });
                        jQuery("saDamageRecoup").trigger('reloadGrid');
                        console.log(name);
                        
@@ -89,7 +89,7 @@
                        ]
                     }},
                    { label: 'Product Sku',name: 'productSku',fixed:true, editable: true,edittype:"select",formatter:'select'},
-                   { label: 'Product Name',name: 'productName',fixed:true, editable: true, edittype:"select",formatter:'select'},
+                   { label: 'Product Name',name: 'productId',fixed:true, editable: true, edittype:"select",formatter:'select',editoptions:{value:getProductName()}},
                    { label: 'Locations',name: 'inventoryLocationId',fixed:true, editable: true, edittype:"select",formatter:'select', editoptions:{value:getLocation()}},
                    { label: 'Adjusted Stock',name: 'amount',fixed:true, editable: true, edittype:"text"},
                    { label: 'Reasons',name: 'inventoryTxReasonId',fixed:true, editable: true, edittype:"select",formatter:'select', editoptions:{value:getReasons()}},
@@ -130,7 +130,7 @@
 
        });
        $('#saDamageRecoup').setGridWidth(parseInt($(window).width()) - 20);
-       $("#productName").on('change keyup paste', function () {
+       $("#comments").on('change keyup paste', function () {
            SearchByProductName();
        });
        $("#date").on('change keyup paste', function () {
@@ -238,9 +238,9 @@
         $.getJSON('SaDamageRecoup/CreateProductName', function(data) {
         if (data != null) {
             for (var i = 0; i < data.length; i++) {
-                if(data[i].value == name)
+                if(data[i].value == name || name =="")
                 {
-             ProductNameList[data[i].text]=data[i].text;
+             ProductNameList[data[i].id]=data[i].text;
                 } 
               }
             }//if
