--- a/Views/invAdj/Index.cshtml
+++ b/Views/invAdj/Index.cshtml
@@ -75,6 +75,7 @@
                         }
                     },
                    { label: 'Inventory Tx Detail Id',name: 'inventoryTxDetailId', editable: true,hidden:true,editoptions: { readonly: 'readonly'},key: true},
+                   { label: 'InventoryTxTypeId',name: 'inventoryTxTypeId',hidden:true, editable: true,editoptions: { readonly: 'readonly'}},
                    { label: 'Sa Code',name: 'saCode',hidden:true, editable: true,editoptions: { readonly: 'readonly'}},
                    { label: 'Date',name: 'date',fixed:true,hidden:true, edittype:"text",editoptions: { readonly: 'readonly'}},
                    { label: 'Supplier',name: 'supplierName',fixed:true, editable: true, edittype:"select",formatter:'select', editoptions: {value:getSupplierNames(),                
@@ -115,7 +116,7 @@
                  },value:getProductName()} },
                    { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select', editoptions:{value:getLocation()}},
                    { label: 'Updated Stock',name: 'amount',fixed:true,width:95,align:"right",editable: true, edittype:"text"},
-                   { label: 'Reasons',name: 'inventoryTxReasonId',fixed:true,width:100, editable: true, edittype:"select",formatter:'select', editoptions:{value:getReasons()}},
+                   { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:100, editable: true, edittype:"select",formatter:'select',editoptions:{value: getReasons()}},
                    { label: 'Notes',name: 'comments',fixed:true,width:450, editable: true, edittype:"text",}
 
                  ], 
@@ -266,15 +267,22 @@
         var ProductNameList= {};
         $.ajaxSetup( { "async": false } );
         $.getJSON('InvAdj/CreateProductName', function(data) {
-        if (data != null && name =="") {
-            for (var i = 0; i < data.length; i++) {
-                 ProductNameList[data[i].id]=data[i].text;
-              }
-            }//if
+        if (data != null) {
+
+
+            for (var i = 0; i < data.length; i++) 
+            {
+                if(name =="" || data[i].value==name)
+                {
+                    ProductNameList[data[i].id]=data[i].text;
+                }
+            }
+         }//if
 
             });
             $.ajaxSetup( { "async": true } );
-           // console.log(ProductNameList);
+            
+            console.log(ProductNameList);
            return ProductNameList; 
 
         }
