--- a/Views/SaDamageRecoup/Index.cshtml
+++ b/Views/SaDamageRecoup/Index.cshtml
@@ -13,18 +13,22 @@
   <div class="container-flow">
   <div class="row">
            <div class="col-sm-3">
-         <label for="date" style="font-size:14px;">Transaction Date:</label>
-         <input type="date" style="font-size:14px;" id="date" name="date">
-           </div>
+          <label for="date"  style="font-size:10px;">Transaction Date:</label>
+         <input type="date" value=""  style="font-size:10px;" id='date' name="date" />
+         </div>   
            
-           <div class="col-sm-5">
-         <input type="text"  style="font-size:10px;" class="form-control" placeholder="Notes" id="comments" name="comments">
+           <div class="col-sm-4">
+         <input type="text"  style="font-size:10px;" class="form-control" placeholder="Notes" id="comments" name="comments"/>
              </div>
-            <div class="col-sm-2">
-          <input type="text" style="font-size:10px;" name="input" id="saCode" value="SA Code" readonly>
+             <div class="col-md-1 ">
+                 </div>
+            <div class="col-sm-2 text-sm-right">
+          <input type="text" style="font-size:10px; border-radius: 0 !important" name="input" class="form-control" placeholder="Sa Code" id="saCode" readonly/>
            </div>
-            <div class="col-sm-2 text-right">
-          <button class="btn btn-outline-secondary" id="save" type="button">Save</button>  
+                <div class="col-sm-1">
+                 </div>
+            <div class="col-sm-1 text-right">
+          <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
             </div>        
 </div>
 </div>
@@ -38,6 +42,7 @@
 
     $.jgrid.defaults.styleUI = 'Bootstrap';
      $.jgrid.defaults.responsive = true;
+    var date;
     var header = false;
     var curRowId = -1;
     var ProductNameList= [];
@@ -78,40 +83,29 @@
                    { label: 'Product Name',name: 'productName',fixed:true,editable: true,                                                             
                     editoptions: { value:getProductName(),
                                   dataInit: function(elem) {
-                                        
-                                   $(elem).autocomplete({source: ProductNameList,autoFocus: true,minLength: 0 });   
-                                    //console.log(elem);
-                                  },
-                       dataEvents: [
-                           {
-                        type: 'change',
-                        fn: function(e) {
-                       name= $('#saDamageRecoup').getCell(curRowId, 'productName');
-                       $('#saDamageRecoup').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(name));
-                       $('#saDamageRecoup').jqGrid('setCell',curRowId,'productSku', getProductSku(name));
-                                            
-                         }
-                     }]
+                    curRowId = $('#saDamageRecoup').getGridParam('selrow');        
+                    $(elem).autocomplete({source: ProductNameList,autoFocus: true,minLength: 0, select:function (event, ui) {
+                    $('#saDamageRecoup').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
+                    $('#saDamageRecoup').jqGrid('setCell',curRowId,'productSku', getProductSku(ui.item.value));
+                    
+                    $('input#supplierName').val(getSupplierNames(ui.item.value));
+                    $('input#productSku').val(getProductSku(ui.item.value));
+                } });   
+                                  }
                    }},
-                   { label: 'Supplier',name: 'supplierName',fixed:true, edittype:"text", editoptions: {readonly: 'readonly'}},
-                   { label: 'Product Sku',name: 'productSku',fixed:true,width:80, edittype:"text", editoptions: {readonly: 'readonly'}},
+                   { label: 'Supplier',name: 'supplierName',fixed:true,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
+                   { label: 'Product Sku',name: 'productSku',fixed:true,width:80,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                    { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select', editoptions:{value:getLocation()}},
                    { label: 'Updated Stock',name: 'amount',fixed:true,width:95,align:"right",editable: true, edittype:"text"},
                    { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:110, editable: true, edittype:"select",formatter:'select', editoptions:{value:getReasons()}},
-                   { label: 'Notes',name: 'comments',fixed:true,width:450, editable: true, edittype:"text",}
+                   //{ label: 'Notes',name: 'comments',fixed:true,width:450, editable: true, edittype:"text",}
 
                  ], 
                viewrecords: true,
                height: 250,
                rowNum: 20,
                pager: "#jqGridPager",
-               editurl: 'SaDamageRecoup/Update',
-               onSelectRow: function(rowid) {
-                
-                curRowId=rowid;
-
-
-               }
+               editurl: 'SaDamageRecoup/Update',              
 
            })
                
@@ -126,7 +120,7 @@
                   
                },
                {
-             zIndex:99,
+              zIndex:99,
               afterShowForm: function () {
               var idSelector = $.jgrid.jqID(this.p.id);
               if(header==false) {
@@ -143,7 +137,11 @@
                });
 
        });
+       $(document).ready(function () {  
+           $('#date').val(date());
+       
 
+       });
        $('#saDamageRecoup').setGridWidth(parseInt($(window).width()) - 20);
        $("#comments").on('change keyup paste', function () {
            SearchByComments();
@@ -155,6 +153,16 @@
        $("#save").on('click', function () {
            SaveHeader();
         });
+        function date()
+        {
+         var currentDate = new Date();
+         var day = ("0" + currentDate.getDate()).slice(-2);
+         var month = ("0" + (currentDate.getMonth() + 1)).slice(-2);
+         var today = currentDate.getFullYear() + "-" + (month) + "-" + (day);
+         date = today.toString();
+         console.log(date);
+         return date;
+        }
     
             function SaveHeader()
     {
@@ -249,7 +257,6 @@
 
             });
             $.ajaxSetup( { "async": true } );
-            console.log(ProductSku);
            return ProductSku; 
 
         }
