--- a/Views/invAdj/Index.cshtml
+++ b/Views/invAdj/Index.cshtml
@@ -9,42 +9,44 @@
     <h1 class="display-4">Inventory Adjustment</h1>
 </div>
 <fieldset class="scheduler-border">
-  <legend class="scheduler-border">Search</legend>
-<div class="container-flow">
+  <legend class="scheduler-border">Create Header</legend>
+  <div class="container-flow">
   <div class="row">
-           <div class="col-3 text-left">
-         <label for="date" style="font-size:14px;">Transaction Date:</label>
-         <input type="date" style="font-size:14px;" id="date" name="date">
-           </div>
+           <div class="col-sm-3">
+          <label for="date"  style="font-size:10px;">Transaction Date:</label>
+         <input type="date" value=""  style="font-size:10px;" id='date' name="date" />
+         </div>   
            
-           <div class="col-4">
-         <input type="text"  style="font-size:14px;" class="form-control" placeholder="Notes" aria-label="Notes" aria-describedby="basic-addon2" id="comments">
+           <div class="col-sm-4">
+         <input type="text"  style="font-size:10px; border-radius: 0 !important" class="form-control" placeholder="Notes" id="comments" name="comments"/>
+             </div>
+             <div class="col-md-1 ">
+                 </div>
+            <div class="col-sm-2 text-sm-right">
+          <input type="text" style="font-size:10px; border-radius: 0 !important" name="input" class="form-control" placeholder="Sa Code" id="saCode" readonly/>
            </div>
-           
-           <div class="col-3">
-          <input type="text" name="input" id="saCode" value="SA Code" readonly>
-            </div>
-
-            <div class="col-2 text-right">
-          <button class="btn btn-outline-secondary" id="save" type="button">Save</button>  
+                <div class="col-sm-1">
+                 </div>
+            <div class="col-sm-1 text-right">
+          <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
             </div>        
-
-  </div>
 </div>
-
+</div>
 </fieldset>
 
 <table id="invAdj" style="align: center"></table>
 <div id="jqGridPager"></div>
-
 @section scripts {
+
 <script type="text/javascript">
 
     $.jgrid.defaults.styleUI = 'Bootstrap';
-    $.jgrid.defaults.responsive = true;
+     $.jgrid.defaults.responsive = true;
+    var date;
     var header = false;
     var curRowId = -1;
-    var name="";
+    var ProductNameList= [];
+    var name ="";
     $(document).ready(function() {
        $("#invAdj").jqGrid({
                url: 'InvAdj/GetAll',
@@ -78,45 +80,24 @@
                    { label: 'InventoryTxTypeId',name: 'inventoryTxTypeId',hidden:true, editable: true,editoptions: { readonly: 'readonly'}},
                    { label: 'Sa Code',name: 'saCode',hidden:true, editable: true,editoptions: { readonly: 'readonly'}},
                    { label: 'Date',name: 'date',fixed:true,hidden:true, edittype:"text",editoptions: { readonly: 'readonly'}},
-                   { label: 'Supplier',name: 'supplierName',fixed:true, editable: true, edittype:"select",formatter:'select', editoptions: {value:getSupplierNames(),                
-                   dataInit: function (elem) {
-                    name = $(elem).val();
-                   
-                    $('#invAdj').setColProp('productId', { editoptions: { value:getProductName()} });
-                    $('#invAdj').setColProp('productSku', { editoptions: { value:getProductSku()} });
-                    console.log(name);
-                    },
-                       dataEvents: [
-                    {
-                        type: 'change',
-                        fn: function(e) {
-                       name =$('#invAdj').jqGrid ('getCell', curRowId, 'supplierName');
-                      $('#invAdj').setColProp('productId', { editoptions: { value:getProductName()} });
-                      $('#invAdj').setColProp('productSku', { editoptions: { value:getProductSku()} });
-                       $("invAdj").trigger('reloadGrid');
-                       console.log(name);
-                       
-                        }
-                    }
-                       ]
-                    }},
-                   { label: 'Product Sku',name: 'productSku',fixed:true,width:80, editable: true,edittype:"select",formatter:'select',},
-                   { label: 'Product Name',name: 'productId',fixed:true, editable: true, edittype:"select",formatter:'select', editoptions: { dataUrl:'InvAdj/CreateProductName',
-                 buildSelect: function(data) {
-                     var s = '<select>';
-                          for (var i = 0; i <data.length; i++) { 
-                             if(data[i].value == name)
-                             {
-                             s += '<option value="'+data[i].id+'">'+data[i].text+'</option>';
-                             
-                             }
-                             
-                     }                
-                     return  s += "</select>";
-                 },value:getProductName()} },
+                   { label: 'Product Name',name: 'productName',fixed:true,editable: true,                                                             
+                    editoptions: { value:getProductName(),
+                                  dataInit: function(elem) {
+                    curRowId = $('#invAdj').getGridParam('selrow');        
+                    $(elem).autocomplete({source: ProductNameList,autoFocus: true,minLength: 0, select:function (event, ui) {
+                    $('#invAdj').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
+                    $('#invAdj').jqGrid('setCell',curRowId,'productSku', getProductSku(ui.item.value));
+                    
+                    $('input#supplierName').val(getSupplierNames(ui.item.value));
+                    $('input#productSku').val(getProductSku(ui.item.value));
+                } });   
+                                  }
+                   }},
+                   { label: 'Supplier',name: 'supplierName',fixed:true,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
+                   { label: 'Product Sku',name: 'productSku',fixed:true,width:80,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                    { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select', editoptions:{value:getLocation()}},
                    { label: 'Updated Stock',name: 'amount',fixed:true,width:95,align:"right",editable: true, edittype:"text"},
-                   { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:100, editable: true, edittype:"select",formatter:'select',editoptions:{value: getReasons()}},
+                   { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:110, editable: true, edittype:"select",formatter:'select', editoptions:{value:getReasons()}},
                    { label: 'Notes',name: 'comments',fixed:true,width:450, editable: true, edittype:"text",}
 
                  ], 
@@ -124,12 +105,7 @@
                height: 250,
                rowNum: 20,
                pager: "#jqGridPager",
-               editurl: 'InvAdj/Update',
-               onSelectRow: function(rowid) {
-                curRowId=rowid;
-
-
-               }
+               editurl: 'InvAdj/Update',              
 
            })
                
@@ -139,10 +115,12 @@
            $('#invAdj').navGrid('#jqGridPager',
                // the buttons to appear on the toolbar of the grid
                { edit: false,add:true, del: false, search: false, refresh: false, view: false, position: "left", cloneToTop: false },
-               // options for the Add Dialog
+              
                {
+                  
                },
                {
+              zIndex:99,
               afterShowForm: function () {
               var idSelector = $.jgrid.jqID(this.p.id);
               if(header==false) {
@@ -159,6 +137,11 @@
                });
 
        });
+       $(document).ready(function () {  
+           $('#date').val(date());
+       
+
+       });
        $('#invAdj').setGridWidth(parseInt($(window).width()) - 20);
        $("#comments").on('change keyup paste', function () {
            SearchByComments();
@@ -170,6 +153,17 @@
        $("#save").on('click', function () {
            SaveHeader();
         });
+        function date()
+        {
+         var currentDate = new Date();
+         var day = ("0" + currentDate.getDate()).slice(-2);
+         var month = ("0" + (currentDate.getMonth() + 1)).slice(-2);
+         var today = currentDate.getFullYear() + "-" + (month) + "-" + (day);
+         date = today.toString();
+         console.log(date);
+         return date;
+        }
+    
             function SaveHeader()
     {
          header = true;
@@ -177,7 +171,7 @@
         var notes = $("#comments").val();
         if(date=="")
         {
-            var currentDate = new Date();
+         var currentDate = new Date();
          var day = ("0" + currentDate.getDate()).slice(-2);
          var month = ("0" + (currentDate.getMonth() + 1)).slice(-2);
          var today = currentDate.getFullYear() + "-" + (month) + "-" + (day);
@@ -228,43 +222,45 @@
         grid.trigger("reloadGrid", [{ page: 1 }]);
     }
 
-            function getSupplierNames() {
-        var SupplierList= {};
+            function getSupplierNames(value) {
+        var Supplier="";
         $.ajaxSetup( { "async": false } );
         $.getJSON('InvAdj/CreateList', function(data) {
         if (data != null) {
-            
+           
             for (var i = 0; i < data.length; i++) {
-             SupplierList[data[i].text]=data[i].text;
-              } 
+                if(value == data[i].value)
+                {
+             Supplier= data[i].text;
+                }
+                } 
             }//if
 
             });
             $.ajaxSetup( { "async": true } );
-           return SupplierList; 
+           return Supplier; 
 
         }
 
-              function getProductSku() {
-        var ProductSkuList= {};
+              function getProductSku(value) {
+        var ProductSku= "";
         $.ajaxSetup( { "async": false } );
         $.getJSON('InvAdj/CreateProductSkuList', function(data) {
         if (data != null) {
             for (var i = 0; i < data.length; i++) {
-                if(data[i].value == name)
+                if(data[i].value == value)
                 {
-             ProductSkuList[data[i].text]=data[i].text;
+             ProductSku=data[i].text;
                 } 
               }
             }//if
 
             });
             $.ajaxSetup( { "async": true } );
-           return ProductSkuList; 
+           return ProductSku; 
 
         }
                 function getProductName() {
-        var ProductNameList= {};
         $.ajaxSetup( { "async": false } );
         $.getJSON('InvAdj/CreateProductName', function(data) {
         if (data != null) {
@@ -272,10 +268,7 @@
 
             for (var i = 0; i < data.length; i++) 
             {
-                if(name =="" || data[i].value==name)
-                {
-                    ProductNameList[data[i].id]=data[i].text;
-                }
+                ProductNameList[i]=data[i].value;
             }
          }//if
 
